manifests/pireborn/pireborn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pireborn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pireborn
  template:
    metadata:
      labels:
        app: pireborn
    spec:
      containers:
        - name: pireborn
          image: ghcr.io/aaronescoto/pireborn:production
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-creds
