manifests/pireborn/pireborn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pireborn
spec:
  selector:
    app: pireborn
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
