manifests/pireborn/pireborn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pireborn-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: dev.aaronescoto.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pireborn
            port:
              number: 80
